# bazel-cilium-tools

./: BUILD.bazel  MODULE.bazel  README.md  USAGE.md  defs.bzl  extensions.bzl
cmd/gen_pool/: BUILD.bazel  main.go  main_test.go
private/: BUILD.bazel  cilium_download.bzl  loadbalancer_pool.bzl
private/tests/: BUILD.bazel  argument_construction_test.bzl  cilium_wait_test.bzl  loadbalancer_pool_test.bzl  test-kubeconfig.yaml
private/tests/test_data/: BUILD.bazel  fallback_format.txt  invalid_json.json  mixed_format.json  multi_node.json  no_internal_ip.json  single_node.json  ten_network.json
