"""cilium_tools module for Cilium CNI management with Bazel.

This module provides simple cilium-cli integration via sh_binary targets.
"""

module(
    name = "cilium_tools",
    version = "1.0.0",
    compatibility_level = 1,
)

# Core dependencies
bazel_dep(name = "platforms", version = "0.0.11")

# Go rules for binary implementation
bazel_dep(name = "rules_go", version = "0.48.0")
bazel_dep(name = "gazelle", version = "0.37.0")

# Extension for configuring cilium binary
cilium_extension = use_extension(":extensions.bzl", "cilium")
use_repo(cilium_extension, "cilium_binary")
