load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "gen_pool_lib",
    srcs = ["main.go"],
    importpath = "github.com/steeve/buildfarm/tools/cilium_tools/cmd/gen_pool",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gen_pool",
    embed = [":gen_pool_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "gen_pool_test",
    srcs = ["main_test.go"],
    embed = [":gen_pool_lib"],
)